--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "tailwinds:css": "postcss assets/css/tailwind.css -o assets/css/style.css"
   },
   "author": "ayoub mahmoud",
